--- a/Files/Sarraf.css
+++ b/Files/Sarraf.css
@@ -91,7 +91,7 @@ pre {
     margin: auto;
   }
 
-  .centeredmenu {
+  .topmenu {
     width: 80%;
     max-width: 1137px;
     margin: auto;
@@ -136,23 +136,23 @@ a:hover {
   margin-bottom: 2px;
 }
 
-.centeredmenu {
+.topmenu {
    border-radius: 10px;
    border: 2px solid black;
    background-color: rgb(255, 255, 255);
-   font-size: 1.2em;
+   font-size: 1.15em;
    margin-bottom: 2px;
    text-align: center;
    padding-top: 0.2em;
    padding-bottom: 0.2em;
 }
 
-.centeredmenu ul {
+.topmenu ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-.centeredmenu ul li {
+.topmenu ul li {
    display: inline-block;
    padding-left: 0.65em;
    padding-right: 0.65em;
@@ -160,14 +160,14 @@ a:hover {
    padding-bottom: 0.4em;
    margin: 0;
 }
-.centeredmenu ul li a {
+.topmenu ul li a {
    text-decoration:none;
 }
-.centeredmenu ul li a:hover {
+.topmenu ul li a:hover {
   text-decoration: underline;
 }
-.centeredmenu ul li a.active,
-.centeredmenu ul li a.active:hover {
+.topmenu ul li a.active,
+.topmenu ul li a.active:hover {
    font-weight:bold;
    text-decoration: underline;
 }
